change github and x icon

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <ul class="list-inline ">
         <li>
           <a href="https://github.com/BrianAugnoo/fullstack-challenges" target="_blank">
-            <i class="fa-brands fa-square-github"></i>
+            <i class="fa-brands fa-square-github black"></i>
           </a>
         </li>
 
         <li>
           <a href="https://x.com/" target="_blank">
-            <i class="fa-brands fa-square-x-twitter"></i>
+            <i class="fa-brands fa-square-x-twitter black"></i>
           </a>
         </li>
 
