--- a/index.html
+++ b/index.html
@@ -5,40 +5,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brian Augnoo</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-  <div class="container">
-    <div class="card card-white text_center">
-      <h1>Hello, I'm Brian 😎</h1>
-      <img src="/profile/images/moi.jpg" alt="profil image" width="100" class="img_circle">
-      <P>hello my name is Brian, I'm learn fullstack web developement.I prefer back end cause I'm not an artist</P>
-      <a href="https://www.lewagon.com/fr/mauritius" class="btn-red" target="_blank" id="wagon_link">Discover Le
-        Wagon</a>
+  <div class="fix">
+    <img src="images/logo.png" alt="">
+    <nav class="op-0">
+      <a href="">home</a>
+      <a href="">about</a>
+      <a href="">contact</a>
+    </nav>
+    <div></div>
+  </div>
+
+  <div class="intro">
+    <h1>
+      I help founders turn ideas <br>
+      into seamless <span class="curv">digital experiences</span>
+    </h1>
+
+    <div class="self">
+      <h2>Hello, I'm Augnoo Brian</h2>
+      <img src="images/moi.jpg" alt="avatar" class="img_circle">
+      <h2>a Back End developer</h2>
     </div>
+  </div>
 
-    <div class="card card-white text_center">
-      <h2>Follow me</h2>
-      <ul class="list-inline ">
-        <li>
-          <a href="https://github.com/BrianAugnoo/fullstack-challenges" target="_blank">
-            <i class="fa-brands fa-square-github black"></i>
-          </a>
-        </li>
 
-        <li>
-          <a href="https://x.com/" target="_blank">
-            <i class="fa-brands fa-square-x-twitter black"></i>
-          </a>
-        </li>
+  <div class="relative">
+    <div class="elipse"></div>
+    <div class="skills">
+      <h2>skills</h2>
 
-        <li>
-          <a href="https://medium.com/" target="_blank">
-            <i class="fab fa-medium"></i>
-          </a>
-        </li>
-      </ul>
+      <div class="cards">
+        <div class="front-end">
+          <h3>front-end</h3>
+        </div>
+
+        <div class="back-end">
+          <h3>back-end</h3>
+        </div>
+
+        <div class="data-base">
+          <h3>data-base</h3>
+        </div>
+        
+        <div class="appendix">
+          <h3>appendix</h3>
+        </div>
+      </div>
     </div>
   </div>
 </body>
