--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <img src="images/moi.jpg" alt="avatar" class="img_circle">
       <h2>a Back End developer</h2>
     </div>
+    <div style="display: flex; justify-content: center; margin-top: 20px;">
+      <button class="show-cv">show cv</button>
+    </div>
   </div>
 
 
