--- a/index.html
+++ b/index.html
@@ -45,18 +45,22 @@
       <div class="cards">
         <div class="front-end">
           <h3>front-end</h3>
+          <div class="skills-glass"></div>
         </div>
 
         <div class="back-end">
           <h3>back-end</h3>
+          <div class="skills-glass"></div>
         </div>
 
         <div class="data-base">
           <h3>data-base</h3>
+          <div class="skills-glass"></div>
         </div>
         
         <div class="appendix">
           <h3>appendix</h3>
+          <div class="skills-glass"></div>
         </div>
       </div>
     </div>
