--- a/index.html
+++ b/index.html
@@ -44,27 +44,162 @@
 
       <div class="cards">
         <div class="front-end">
-          <h3>front-end</h3>
-          <div class="skills-glass"></div>
+          <h3>front-end | UI/UX</h3>
+          <div class="skills-glass">
+            <div class="glass-column">
+               <div class="glass">
+                  <img src="images/icons8-javascript-48.png" alt="js icon">
+                  <p>javascript</p>
+               </div>
+
+               <div class="glass">
+                  <img src="images/icons8-sass-64.png" alt="sass icon">
+                  <p>sass/scss</p>
+               </div>
+            </div>
+
+            <div class="glass-column">
+              <div class="glass">
+                <img src="images/icons8-bootstrap-48.png" alt="bootstrap">
+                <p>bootstrap</p>
+              </div>
+
+              <div class="glass">
+                <img src="images/icons8-figma-48.png" alt="Figma">
+                <p>Figma</p>
+              </div>
+           </div>
+
+           <div class="glass-column">
+            <div class="glass">
+              <img src="images/icons8-tailwind-css-64.png" alt="tailwind">
+              <p>tailwind</p>
+            </div>
+          </div>
+          </div>
         </div>
 
         <div class="back-end">
           <h3>back-end</h3>
-          <div class="skills-glass"></div>
+          <div class="skills-glass">
+            <div class="glass-column">
+              <div class="glass">
+                <img src="images/icons8-ruby-48.png" alt="Ruby">
+                <p>Ruby</p>
+              </div>
+              <div class="glass">
+                <img src="images/icons8-python-48.png" alt="python">
+                <p>python</p>
+              </div>
+            </div>
+
+            <div class="glass-column">
+              <div class="glass">
+                <img src="images/Ruby on Rails.svg" alt="Ruby on Rails">
+                <p>Rails</p>
+              </div>
+              <div class="glass">
+                <img src="images/icons8-rest-api-64.png" alt="API REST">
+                <p>Rest API</p>
+              </div>
+            </div>
+
+            <div class="glass-column">
+              <div class="glass">
+                <img src="images/websocket-logo-black-and-white.png" alt="websoket">
+                <p>websocket</p>
+              </div>
+
+              <div class="glass">
+                <img src="images/icons8-nodejs-48.png" alt="nodejs">
+                <p>nodejs</p>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="data-base">
-          <h3>data-base</h3>
-          <div class="skills-glass"></div>
+          <h3>data-base | Hosting</h3>
+          <div class="skills-glass">
+            <div class="glass-column">
+              <div class="glass">
+                <img src="images/icons8-sql-60.png" alt="sql">
+                <p>SQL</p>
+              </div>
+              <div class="glass">
+                <img src="images/icons8-postgresql-24.png" alt="Postgre">
+                <p>Postgre</p>
+              </div>
+            </div>
+
+            <div class="glass-column">
+              <div class="glass">
+                <img src="images/icons8-aws-48.png" alt="aws">
+                <p>aws</p>
+              </div>
+
+              <div class="glass">
+                <img src="images/icons8-sqlite-50.png" alt="sqlite">
+                <p>sqlite</p>
+              </div>
+            </div>
+
+            <div class="glass-column">
+              <div class="glass">
+                <img src="images/icons8-heroku-48.png" alt="heroku">
+                <p>heroku</p>
+              </div>
+
+              <div class="glass">
+                <img src="images/flyio.webp" alt="flyio">
+                <p>fly.io</p>
+              </div>
+            </div>
+          </div>
         </div>
         
         <div class="appendix">
           <h3>appendix</h3>
-          <div class="skills-glass"></div>
+          <div class="skills-glass">
+            <div class="glass-column">
+              <div class="glass">
+                <img src="images/icons8-git-50.png" alt="git">
+                <p>git</p>
+              </div>
+              <div class="glass">
+                <img src="images/icons8-ubuntu-48.png" alt="unbuntu">
+                <p>unbuntu</p>
+              </div>
+            </div>
+
+            <div class="glass-column">
+              <div class="glass">
+                <img src="images/icons8-cyber-security-50.png" alt="security">
+                 <p>security</p>
+              </div>
+              <div class="glass">
+                <img src="images/icons8-artificial-intelligence-50.png" alt="AI">
+                <p>AI/LLM</p>
+              </div>
+            </div>
+
+            <div class="glass-column">
+              <div class="glass">
+                <img src="images/icons8-seo-50.png" alt="seo">
+                <p>seo</p>
+              </div>
+              <div class="glass">
+                <img src="images/icons8-smartphone-tablet-50.png" alt="smartphone">
+                <p>Web App</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
+  <script src="index.js" defer></script>
 </body>
 
 </html>
