--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
     </div>
   </div>
 
+  <div class="education">
+    <h2>education</h2>
+  </div>
   <script src="index.js" defer></script>
 </body>
 
