--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <h2>a Back End developer</h2>
     </div>
     <div style="display: flex; justify-content: center; margin-top: 20px;">
-      <button class="show-cv">show cv</button>
+      <a href="file/AugnooBrianResume (2).pdf" download="this_guy_cv.pdf">
+        <button class="show-cv">show cv</button>
+      </a>
     </div>
   </div>
 
@@ -197,11 +199,13 @@
         </div>
       </div>
     </div>
+
+    <div class="education">
+      <h2>education</h2>
+    </div>
   </div>
 
-  <div class="education">
-    <h2>education</h2>
-  </div>
+  <div></div>
   <script src="index.js" defer></script>
 </body>
 
