--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brian Augnoo</title>
   <link rel="stylesheet" href="style.css">
-
+   <link rel="icon" href="images/icon.png" type="image/png">
 </head>
 
 <body>
@@ -159,7 +159,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="appendix">
           <h3>appendix</h3>
           <div class="skills-glass">
@@ -201,7 +201,23 @@
     </div>
 
     <div class="education">
-      <h2>education</h2>
+      <h2>Education</h2>
+      <div class="wagon">
+        <div class="wagon-info">
+          <h3>Le Wagon</h3>
+          <div class="description">
+            <p>Before Le Wagon, I already had this need to create. But I didn’t want to just follow tutorials or copy code — I wanted to understand, to build, to invent.
+
+              During those intense weeks, I learned how to turn a raw idea into a living app. I faced doubt, bugs, late nights… but also clarity, breakthroughs, and the pride of building something real with my own hands.
+
+              My final project, Handmade, came from a deep belief: in a world flooded by AI, we need to bring back space for the human, the artist, the intentional.
+
+              Today, I don’t just code. I create useful, honest, and grounded experiences — and I’m only getting started.
+            </p>
+          </div>
+        </div>
+        <img src="images/wagon.svg" alt="Wagon image">
+      </div>
     </div>
   </div>
 
