--- a/index.html
+++ b/index.html
@@ -10,242 +10,247 @@
 </head>
 
 <body>
+
   <div class="fix">
     <img src="images/logo.png" alt="">
     <nav class="op-0">
-      <a href="">home</a>
-      <a href="">about</a>
-      <a href="">contact</a>
+      <a href="" id="home">home</a>
+      <a href="" id="about">about</a>
+      <a href="" id="contact">contact</a>
     </nav>
     <div></div>
   </div>
 
-  <div class="intro">
-    <h1>
-      I help founders turn ideas <br>
-      into seamless <span class="curv">digital experiences</span>
-    </h1>
+  <div id="smooth-wrapper">
+    <div id="smooth-content">
+      <div class="intro" id="intro">
+        <h1>
+          I help founders turn ideas <br>
+          into seamless <span class="curv">digital experiences</span>
+        </h1>
 
-    <div class="self">
-      <h2>Hello, I'm Augnoo Brian</h2>
-      <img src="images/moi.jpg" alt="avatar" class="img_circle">
-      <h2>a Back End developer</h2>
-    </div>
-    <div style="display: flex; justify-content: center; margin-top: 20px;">
-      <a href="file/AugnooBrianResume (2).pdf" download="this_guy_cv.pdf">
-        <button class="show-cv">show cv</button>
-      </a>
+        <div class="self">
+          <h2>Hello, I'm Augnoo Brian</h2>
+          <img src="images/moi.jpg" alt="avatar" class="img_circle">
+          <h2>a Back End developer</h2>
+        </div>
+        <div style="display: flex; justify-content: center; margin-top: 20px;">
+          <a href="file/AugnooBrianResume (2).pdf" download="this_guy_cv.pdf">
+            <button class="show-cv">show cv</button>
+          </a>
+        </div>
+      </div>
+      <div class="relative">
+        <div class="elipse"></div>
+        <div class="skills">
+          <h2>Skills</h2>
+
+          <div class="cards">
+            <div class="front-end" data-lag="0.5">
+              <h3>front-end | UI/UX</h3>
+              <div class="skills-glass">
+                <div class="glass-column">
+                   <div class="glass">
+                      <img src="images/icons8-javascript-48.png" alt="js icon">
+                      <p>javascript</p>
+                   </div>
+
+                   <div class="glass">
+                      <img src="images/icons8-sass-64.png" alt="sass icon">
+                      <p>sass/scss</p>
+                   </div>
+                </div>
+
+                <div class="glass-column">
+                  <div class="glass">
+                    <img src="images/icons8-bootstrap-48.png" alt="bootstrap">
+                    <p>bootstrap</p>
+                  </div>
+
+                  <div class="glass">
+                    <img src="images/icons8-figma-48.png" alt="Figma">
+                    <p>Figma</p>
+                  </div>
+               </div>
+
+               <div class="glass-column">
+                <div class="glass">
+                  <img src="images/icons8-tailwind-css-64.png" alt="tailwind">
+                  <p>tailwind</p>
+                </div>
+              </div>
+              </div>
+            </div>
+
+            <div class="back-end" data-lag="0.75">
+              <h3>back-end</h3>
+              <div class="skills-glass">
+                <div class="glass-column">
+                  <div class="glass">
+                    <img src="images/icons8-ruby-48.png" alt="Ruby">
+                    <p>Ruby</p>
+                  </div>
+                  <div class="glass">
+                    <img src="images/icons8-python-48.png" alt="python">
+                    <p>python</p>
+                  </div>
+                </div>
+
+                <div class="glass-column">
+                  <div class="glass">
+                    <img src="images/Ruby on Rails.svg" alt="Ruby on Rails">
+                    <p>Rails</p>
+                  </div>
+                  <div class="glass">
+                    <img src="images/icons8-rest-api-64.png" alt="API REST">
+                    <p>Rest API</p>
+                  </div>
+                </div>
+
+                <div class="glass-column">
+                  <div class="glass">
+                    <img src="images/websocket-logo-black-and-white.png" alt="websoket">
+                    <p>websocket</p>
+                  </div>
+
+                  <div class="glass">
+                    <img src="images/icons8-nodejs-48.png" alt="nodejs">
+                    <p>nodejs</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="data-base" data-lag="1">
+              <h3>data-base | Hosting</h3>
+              <div class="skills-glass">
+                <div class="glass-column">
+                  <div class="glass">
+                    <img src="images/icons8-sql-60.png" alt="sql">
+                    <p>SQL</p>
+                  </div>
+                  <div class="glass">
+                    <img src="images/icons8-postgresql-24.png" alt="Postgre">
+                    <p>Postgre</p>
+                  </div>
+                </div>
+
+                <div class="glass-column">
+                  <div class="glass">
+                    <img src="images/icons8-aws-48.png" alt="aws">
+                    <p>aws</p>
+                  </div>
+
+                  <div class="glass">
+                    <img src="images/icons8-sqlite-50.png" alt="sqlite">
+                    <p>sqlite</p>
+                  </div>
+                </div>
+
+                <div class="glass-column">
+                  <div class="glass">
+                    <img src="images/icons8-heroku-48.png" alt="heroku">
+                    <p>heroku</p>
+                  </div>
+
+                  <div class="glass">
+                    <img src="images/flyio.webp" alt="flyio">
+                    <p>fly.io</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="appendix" data-lag="1.25">
+              <h3>appendix</h3>
+              <div class="skills-glass">
+                <div class="glass-column">
+                  <div class="glass">
+                    <img src="images/icons8-git-50.png" alt="git">
+                    <p>git</p>
+                  </div>
+                  <div class="glass">
+                    <img src="images/icons8-ubuntu-48.png" alt="unbuntu">
+                    <p>unbuntu</p>
+                  </div>
+                </div>
+
+                <div class="glass-column">
+                  <div class="glass">
+                    <img src="images/icons8-cyber-security-50.png" alt="security">
+                     <p>security</p>
+                  </div>
+                  <div class="glass">
+                    <img src="images/icons8-artificial-intelligence-50.png" alt="AI">
+                    <p>AI/LLM</p>
+                  </div>
+                </div>
+
+                <div class="glass-column">
+                  <div class="glass">
+                    <img src="images/icons8-seo-50.png" alt="seo">
+                    <p>seo</p>
+                  </div>
+                  <div class="glass">
+                    <img src="images/icons8-smartphone-tablet-50.png" alt="smartphone">
+                    <p>Web App</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="education" id="education">
+          <h2>Education</h2>
+          <h3>Le Wagon</h3>
+          <div class="wagon">
+            <div class="wagon-info">
+              <div class="description">
+                <p>Before Le Wagon, I already had this need to create. But I didn’t want to just follow tutorials or copy code — I wanted to understand, to build, to invent.
+
+                  During those intense weeks, I learned how to turn a raw idea into a living app. I faced doubt, bugs, late nights… but also clarity, breakthroughs, and the pride of building something real with my own hands.
+
+                  My final project, Handmade, came from a deep belief: in a world flooded by AI, we need to bring back space for the human, the artist, the intentional.
+
+                  Today, I don’t just code. I create useful, honest, and grounded experiences — and I’m only getting started.
+                </p>
+              </div>
+            </div>
+            <img src="images/wagon.svg" alt="Wagon image">
+          </div>
+        </div>
+
+        <div class="project">
+          <h2>Projects</h2>
+          <div class="project-column">
+            <div class="ilustrator">
+              <div class="glass" id="handmade">
+                <img src="images/handmade_f.png" alt="" class="ilustrator-img">
+              </div>
+              <div class="glass" id="carbnb"></div>
+              <div class="glass"></div>
+            </div>
+
+            <div class="project-description" data-spacing="false">
+              <h3>Title</h3>
+              <p>
+                ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+                ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+                fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+                ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+                fffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
-
-  <div class="relative">
-    <div class="elipse"></div>
-    <div class="skills">
-      <h2>Skills</h2>
-
-      <div class="cards">
-        <div class="front-end">
-          <h3>front-end | UI/UX</h3>
-          <div class="skills-glass">
-            <div class="glass-column">
-               <div class="glass">
-                  <img src="images/icons8-javascript-48.png" alt="js icon">
-                  <p>javascript</p>
-               </div>
-
-               <div class="glass">
-                  <img src="images/icons8-sass-64.png" alt="sass icon">
-                  <p>sass/scss</p>
-               </div>
-            </div>
-
-            <div class="glass-column">
-              <div class="glass">
-                <img src="images/icons8-bootstrap-48.png" alt="bootstrap">
-                <p>bootstrap</p>
-              </div>
-
-              <div class="glass">
-                <img src="images/icons8-figma-48.png" alt="Figma">
-                <p>Figma</p>
-              </div>
-           </div>
-
-           <div class="glass-column">
-            <div class="glass">
-              <img src="images/icons8-tailwind-css-64.png" alt="tailwind">
-              <p>tailwind</p>
-            </div>
-          </div>
-          </div>
-        </div>
-
-        <div class="back-end">
-          <h3>back-end</h3>
-          <div class="skills-glass">
-            <div class="glass-column">
-              <div class="glass">
-                <img src="images/icons8-ruby-48.png" alt="Ruby">
-                <p>Ruby</p>
-              </div>
-              <div class="glass">
-                <img src="images/icons8-python-48.png" alt="python">
-                <p>python</p>
-              </div>
-            </div>
-
-            <div class="glass-column">
-              <div class="glass">
-                <img src="images/Ruby on Rails.svg" alt="Ruby on Rails">
-                <p>Rails</p>
-              </div>
-              <div class="glass">
-                <img src="images/icons8-rest-api-64.png" alt="API REST">
-                <p>Rest API</p>
-              </div>
-            </div>
-
-            <div class="glass-column">
-              <div class="glass">
-                <img src="images/websocket-logo-black-and-white.png" alt="websoket">
-                <p>websocket</p>
-              </div>
-
-              <div class="glass">
-                <img src="images/icons8-nodejs-48.png" alt="nodejs">
-                <p>nodejs</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="data-base">
-          <h3>data-base | Hosting</h3>
-          <div class="skills-glass">
-            <div class="glass-column">
-              <div class="glass">
-                <img src="images/icons8-sql-60.png" alt="sql">
-                <p>SQL</p>
-              </div>
-              <div class="glass">
-                <img src="images/icons8-postgresql-24.png" alt="Postgre">
-                <p>Postgre</p>
-              </div>
-            </div>
-
-            <div class="glass-column">
-              <div class="glass">
-                <img src="images/icons8-aws-48.png" alt="aws">
-                <p>aws</p>
-              </div>
-
-              <div class="glass">
-                <img src="images/icons8-sqlite-50.png" alt="sqlite">
-                <p>sqlite</p>
-              </div>
-            </div>
-
-            <div class="glass-column">
-              <div class="glass">
-                <img src="images/icons8-heroku-48.png" alt="heroku">
-                <p>heroku</p>
-              </div>
-
-              <div class="glass">
-                <img src="images/flyio.webp" alt="flyio">
-                <p>fly.io</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="appendix">
-          <h3>appendix</h3>
-          <div class="skills-glass">
-            <div class="glass-column">
-              <div class="glass">
-                <img src="images/icons8-git-50.png" alt="git">
-                <p>git</p>
-              </div>
-              <div class="glass">
-                <img src="images/icons8-ubuntu-48.png" alt="unbuntu">
-                <p>unbuntu</p>
-              </div>
-            </div>
-
-            <div class="glass-column">
-              <div class="glass">
-                <img src="images/icons8-cyber-security-50.png" alt="security">
-                 <p>security</p>
-              </div>
-              <div class="glass">
-                <img src="images/icons8-artificial-intelligence-50.png" alt="AI">
-                <p>AI/LLM</p>
-              </div>
-            </div>
-
-            <div class="glass-column">
-              <div class="glass">
-                <img src="images/icons8-seo-50.png" alt="seo">
-                <p>seo</p>
-              </div>
-              <div class="glass">
-                <img src="images/icons8-smartphone-tablet-50.png" alt="smartphone">
-                <p>Web App</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="education">
-      <h2>Education</h2>
-      <h3>Le Wagon</h3>
-      <div class="wagon">
-        <div class="wagon-info">
-          <div class="description">
-            <p>Before Le Wagon, I already had this need to create. But I didn’t want to just follow tutorials or copy code — I wanted to understand, to build, to invent.
-
-              During those intense weeks, I learned how to turn a raw idea into a living app. I faced doubt, bugs, late nights… but also clarity, breakthroughs, and the pride of building something real with my own hands.
-
-              My final project, Handmade, came from a deep belief: in a world flooded by AI, we need to bring back space for the human, the artist, the intentional.
-
-              Today, I don’t just code. I create useful, honest, and grounded experiences — and I’m only getting started.
-            </p>
-          </div>
-        </div>
-        <img src="images/wagon.svg" alt="Wagon image">
-      </div>
-    </div>
-
-    <div class="project">
-      <h2>Projects</h2>
-      <div class="project-column">
-        <div class="ilustrator">
-          <div class="glass" id="handmade">
-            <img src="images/handmade_f.png" alt="" class="ilustrator-img">
-          </div>
-          <div class="glass" id="carbnb"></div>
-          <div class="glass"></div>
-        </div>
-
-        <div class="project-description" data-spacing="false">
-          <h3>Title</h3>
-          <p>
-            ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-            ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-            fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-            ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-            fffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div></div>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
   <script src="index.js" defer></script>
 </body>
 
