--- a/index.html
+++ b/index.html
@@ -253,6 +253,17 @@
             </div>
           </div>
         </div>
+
+        <div class="contact">
+          <form id="my-form" action="https://formspree.io/f/movwgndv" method="POST">
+            <label>Email:</label>
+            <input type="email" name="email" />
+            <label>Message:</label>
+            <input type="text" name="message" />
+            <button id="my-form-button">Submit</button>
+            <p id="my-form-status"></p>
+          </form>
+        </div>
       </div>
       <div style="margin-top: 100vh;">.</div>
     </div>
