--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
         </div>
       </div>
 
-      <canvas id="planet"></canvas>
-
       <div class="relative">
         <div class="skills">
           <h2>Skills</h2>
@@ -241,6 +239,7 @@
                 <img src="images/handmade_f.png" alt="" class="ilustrator-img">
               </div>
               <div class="glass" id="carbnb">
+                <h3>A prototype inspired by Carbnb — a community-driven car-sharing concept to explore, list, and book vehicles.</h3>
                 <img src="images/carbnb.png" alt="" class="ilustrator-img">
               </div>
             </div>
@@ -248,11 +247,7 @@
             <div class="project-description handmade-description" data-project="handmade">
               <h3>-Handmade</h3>
               <p>
-                ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-                ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-                fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-                ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-                fffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+                Handmade is a full-stack web application built with Ruby on Rails and enhanced with JavaScript for dynamic interactions. It serves as a creative hub where craft lovers can showcase their handmade creations, explore unique pieces from fellow artisans, and engage with an authentic community. Users can create profiles, upload projects with images, like and comment on others’ work, and discover inspiring creations through a curated feed. Handmade focuses on authenticity, community-driven discovery, and simplicity — offering makers a space to share their passion and grow together.
               </p>
             </div>
           </div>
