--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
-  <script src="index.js" defer></script>
-  <script src="sculpture.js" defer></script>
+  <script src="scroll.js" defer></script>
+  <script src="form.js" defer></script>
 </body>
 
 </html>
