--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+  <div class="cursor-follower">
+    <span>VIEW</span>
+    <small>DETAILS</small>
+  </div>
 
   <div class="fix">
     <img src="images/logo.png" alt="">
@@ -230,15 +234,16 @@
 
         <div class="project">
           <h2>Projects</h2>
+          
           <div class="project-column">
             <div class="ilustrator">
-              <div class="glass" id="handmade">
+              <div class="glass project-list" id="handmade">
                 <h3>A creative hub for handmade lovers to showcase crafts,
                   <br>discover unique pieces, and grow a community around authentic creations.
                 </h3>
                 <img src="images/handmade_f.png" alt="" class="ilustrator-img">
               </div>
-              <div class="glass" id="carbnb">
+              <div class="glass project-list" id="carbnb">
                 <h3>A prototype inspired by Carbnb — a community-driven car-sharing concept to explore, list, and book vehicles.</h3>
                 <img src="images/carbnb.png" alt="" class="ilustrator-img">
               </div>
@@ -276,8 +281,10 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
+  <script src="https://unpkg.com/gsap@3"></script>
   <script src="scroll.js" defer></script>
   <script src="form.js" defer></script>
+  <script src="ilustrator.js" defer></script>
 </body>
 
 </html>
